--- a/end2end-benefits/benefits-claims/notebooks/benefit-claims.ipynb
+++ b/end2end-benefits/benefits-claims/notebooks/benefit-claims.ipynb
@@ -156,13 +156,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# client = OpenAI()\n",
-    "# response = client.chat.completions.create(\n",
-    "#     model='gpt-4o',\n",
-    "#     messages=[{\"role\": \"user\", \"content\": q}]\n",
-    "# )\n",
+    "client = OpenAI()\n",
+    "response = client.chat.completions.create(\n",
+    "    model='gpt-4o',\n",
+    "    messages=[{\"role\": \"user\", \"content\": q}]\n",
+    ")\n",
     "\n",
-    "# response.choices[0].message.content"
+    "response.choices[0].message.content"
    ]
   },
   {
@@ -348,7 +348,7 @@
    "id": "399712ab-91f2-4c69-aea1-a573088c8efd",
    "metadata": {},
    "source": [
-    "## TextSearch: Elasticsearch"
+    "## Using TextSearch: Elasticsearch"
    ]
   },
   {
