--- a/end2end-benefits/benefits-claims/notebooks/offline-rag-evaluation.ipynb
+++ b/end2end-benefits/benefits-claims/notebooks/offline-rag-evaluation.ipynb
@@ -1581,7 +1581,7 @@
     "\n",
     "for record in tqdm(resultsgpt4o_mini):\n",
     "    prompt = prompt2_template.format(**record)\n",
-    "    evaluation = llm(prompt, model='gpt-4o-mini')\n",
+    "    evaluation = llm(prompt, model='gpt-4o')\n",
     "    evals_2.append(evaluation)"
    ]
   },
